[package]
name = "img-to-pdf"
version = "0.1.1"
edition = "2024"
description = "Make PDFs from images"
repository = "https://github.com/AlecGhost/img-to-pdf"
homepage = "https://github.com/AlecGhost/img-to-pdf"
license = "Apache-2.0"

[dependencies]
lopdf = { version = "0.33", features = ["embed_image"] }
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
kamadak-exif = "0.6.1"
walkdir = "2.5.0"

[dev-dependencies]
base64 = "0.22.1"
